# TPtrackproject

misis2024s-23-02-naumov-r-y-main/: CMakeLists.txt  README.md  codeforces.id  status.md
misis2024s-23-02-naumov-r-y-main/prj.application/: CMakeList.txt
misis2024s-23-02-naumov-r-y-main/prj.application/robocrawl/: CMakeLists.txt  input.txt  robocrawl.cpp  start.bat
misis2024s-23-02-naumov-r-y-main/prj.application/robocrawl/commands/: CMakeLists.txt  commands.cpp  (+1 more)
misis2024s-23-02-naumov-r-y-main/prj.codeforces/: 1692C.cpp  1800B.cpp  1932A.cpp  1941B.cpp  1941C.cpp  1971C.cpp  1977D.cpp  1985C.cpp  1985D.cpp  1985E.cpp  234C.cpp  339A.cpp  CMakeLists.txt
misis2024s-23-02-naumov-r-y-main/prj.lab/: CMakeLists.txt
misis2024s-23-02-naumov-r-y-main/prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/complex/: complex.cpp  complex.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/queuearr/: queuearr.cpp  queuearr.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/queuelst/: queuelst.cpp  queuelst.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/queuelstpr/: queuelstpr.cpp  queuelstpr.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/stackarr/: stackarr.cpp  stackarr.hpp
misis2024s-23-02-naumov-r-y-main/prj.lab/stacklst/: stacklst.cpp  stacklst.hpp
misis2024s-23-02-naumov-r-y-main/prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_stackarr.cpp  test_stacklst.cpp
(+12 files in other folders)
