add_executable(234c 234c.cpp)
add_executable(339a 339a.cpp)
add_executable(1692c 1692c.cpp)
add_executable(1800b 1800b.cpp)
add_executable(1941b 1941b.cpp)
add_executable(1941c 1941c.cpp)
add_executable(1932a 1932a.cpp)
add_executable(1985e 1985e.cpp)
add_executable(1985d 1985d.cpp)
add_executable(1985c 1985c.cpp)
add_executable(1977d 1977d.cpp)
add_executable(1971c 1971c.cpp)